# praxis

./: .gitignore  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
benchmarks/: results.json  run.py
docs/: agent-integration.md  architecture.md  philosophy.md  quickstart.md  spec-language.md  writing-specs.md
examples/ci/: README.md  github-actions.yml
examples/gpu_scheduler/scheduler/: core.py
examples/gpu_scheduler/tests/: spec_scheduler.py
examples/production/ai_chat_service/: README.md  app.py  test_chat_service.py
examples/production/payment_api/: README.md  app.py  gateway_client.py
examples/real_world/auth_state_machine/: README.md  auth.py  spec_auth.py  test_auth.py
examples/real_world/circuit_breaker/: README.md  circuit_breaker.py  spec_circuit_breaker.py
examples/real_world/connection_pool/: README.md  pool.py  spec_pool.py
examples/real_world/data_pipeline/: README.md  pipeline.py  spec_pipeline.py
src/praxis/: __init__.py  bridge.py  cli.py  decorators.py  logic.py  pytest_plugin.py  spec.py  types.py
src/praxis/compiler/: emitter.py  (+4 more)
tests/: test_adversarial.py  test_bridge.py  test_counterexample.py  test_coverage_gaps.py  test_decorators.py  test_e2e.py  test_edge_cases.py  test_emitter.py  test_error_messages.py  test_extractor.py  test_fallback.py  test_initial.py  test_logic.py  test_lowering.py  test_new_features.py  test_spec.py  test_stress.py  test_target_verifier.py  test_types.py  test_verification_correctness.py  test_verifier.py
tests/examples/: spec_bank_account.py  spec_rate_limiter.py  spec_user_registration.py
(+78 files in other folders)
